# ntkmirror

./: .gitignore  AUTHORS  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt  run_persistent_memory_benchmark.sh
.github/workflows/: ci.yml  publish.yml
docs/: _quarto.yml  activation_control_ntk.md  composability.md  diffusion_scale_gate_adam_m.md  gating_equivalence_notes.qmd  index.qmd  isr_kv_verifier.md  method.md  ntk_duality_first_principles.qmd  ntkmirror_technical_report.qmd  persistent_memory.md  public_memory_benchmark.md  scientific_method.qmd  v2_operating_layer.md
examples/: gsm8k_small.py  make_disjoint_sft.py  math_eval.jsonl  math_train.jsonl  run_demo.sh  run_memory_demo.sh
scripts/: benchmark_persistent_memory_suite.py  run_disjoint_composition.sh  run_memory_demo.sh
scripts/diffusion/: train_scale_gate_adam_m.py
src/ntkmirror/: __init__.py  __main__.py  artifacts.py  cli.py  compose.py  controller.py  data.py  dual.py  isr.py  layers.py  losses.py  memory.py  retrieval.py  runtime.py
tests/: test_artifacts.py  test_cli.py  test_compose.py  test_controller.py  test_data.py  test_dual.py  test_isr.py  test_layers.py  test_memory.py  test_runtime.py
