[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntkmirror"
version = "0.4.0"
description = "LoRA-free forward-pass fine-tuning with signed log-mask controllers for Hugging Face causal language models. Hassana Labs."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Leon Chlon", email = "lc574@cantab.ac.uk"}]
maintainers = [{name = "Leon Chlon", email = "lc574@cantab.ac.uk"}]
dependencies = [
  "numpy>=1.24",
  "torch>=2.3",
  "transformers>=4.43",
  "accelerate>=0.30",
  "safetensors>=0.4",
]

[project.optional-dependencies]
datasets = ["datasets>=2.20", "pandas>=2.0"]
retrieval = ["sentence-transformers>=3.0"]
diffusion = ["diffusers>=0.30", "pillow>=10"]
benchmark = ["datasets>=2.20", "pandas>=2.0", "sentence-transformers>=3.0"]
isr = ["datasets>=2.20", "numpy>=1.24"]
dev = ["pytest>=8", "ruff>=0.5", "coverage>=7"]
all = [
  "datasets>=2.20",
  "numpy>=1.24",
  "pandas>=2.0",
  "sentence-transformers>=3.0",
  "diffusers>=0.30",
  "pillow>=10",
]

[project.scripts]
ntkmirror = "ntkmirror.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
